# controller-plant-simulation

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  README.md  automate.sh
.github/workflows/: cmake.yml
apps/: CMakeLists.txt
apps/controller/: CMakeLists.txt
apps/controller/inc/: main.h
apps/controller/src/: main.cpp
apps/plant/: CMakeLists.txt
apps/plant/inc/: main.h
apps/plant/src/: main.cpp
controller/: CMakeLists.txt  main.cpp
controller/inc/: main.h
controller/src/: main.cpp
install/include/: main.h
install/include/common/: gaussian.h  generic.h  packets.h  system.h
install/include/needmon/: ethernet.h
install/include/osal/: osal.h
install/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
lib/: CMakeLists.txt
lib/common/: CMakeLists.txt
lib/common/inc/: communication.h  gaussian.h  generic.h  messages.h  packets.h  system.h
lib/common/src/: communication.cpp  gaussian.cpp  messages.cpp  packets.cpp  system.cpp
lib/shared_memory/: CMakeLists.txt  shared_memory.cpp  shared_memory.hpp
plant/: CMakeLists.txt  main.cpp
plant/inc/: main.h
plant/src/: main.cpp
src/: main  main.cpp  multi_thread_ex.cpp
src/main.dSYM/Contents/Resources/DWARF/: main
test/: CMakeLists.txt
